--- a/ui-ssr/styles/import/components/_breadcrumbs.scss
+++ b/ui-ssr/styles/import/components/_breadcrumbs.scss
@@ -17,6 +17,8 @@
       color: $medium-gray;
       font-size: 12px;
       margin: 0 8px;
+      width: 12px;
+      height: 12px;
     }
 
     &:last-child {
